Añadiendo consumo de apis arreglando algunos errores

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=9097
 
 spring.jpa.database=postgresql
 #en update porque aun esta en desarrollo
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.datasource.url=jdbc:postgresql://localhost/donacion
