--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.jpa.database=postgresql
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.url=jdbc:postgresql://localhost/donacion
+spring.datasource.url=jdbc:postgresql://localhost:5432/donacion
 spring.datasource.username=postgres
 spring.datasource.password=postgresql
